--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.77"
+strum = "0.25.0"
+strum_macros = "0.25.3"
 thiserror = "1.0.52"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
