--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,5 @@ anyhow = "1.0.77"
 once_cell = "1.19.0"
 strum = "0.25.0"
 strum_macros = "0.25.3"
-thiserror = "1.0.52"
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
